@@ -99,7 +99,7 @@ class DirtyListExecutor : public QObject, public DirtyListVisit
 	Q_OBJECT
 
 	public:
-		DirtyListExecutor(MapDocument* aDoc, const DirtyListBuild& aFuture, const QString& aWeb, const QString& aUser, const QString& aPwd, unsigned int aTasks, bool aUse4Api);
+		DirtyListExecutor(MapDocument* aDoc, const DirtyListBuild& aFuture, const QString& aWeb, const QString& aUser, const QString& aPwd, bool UseProxy, const QString& ProxyHost, int ProxyPort, unsigned int aTasks);
 		virtual ~DirtyListExecutor();
 
 		virtual bool addPoint(TrackPoint* Pt);
@@ -118,7 +118,9 @@ class DirtyListExecutor : public QObject, public DirtyListVisit
 		unsigned int Tasks, Done;
 		QProgressDialog* Progress;
 		QString Web,User,Pwd;
-		bool Use4Api;
+		bool UseProxy;
+		QString ProxyHost;
+		int ProxyPort;
 		Downloader* theDownloader;
 };
 
