@@ -5,7 +5,7 @@ class MainWindow;
 
 class QString;
 
-void syncOSM(MainWindow* aMain, const QString& aWeb, const QString& aUser, const QString& aPwd, bool Use4Api);
+void syncOSM(MainWindow* aMain, const QString& aWeb, const QString& aUser, const QString& aPwd, bool UseProxy, const QString& ProxyHost, int ProxyPort);
 
 #endif
 
