@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>132</height>
+    <width>416</width>
+    <height>162</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -27,15 +27,8 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <item row="2" column="1" >
-      <widget class="QLineEdit" name="Password" />
-     </item>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="label_3" >
-       <property name="text" >
-        <string>Password</string>
-       </property>
-      </widget>
+     <item row="0" column="1" >
+      <widget class="QLineEdit" name="Website" />
      </item>
      <item row="0" column="0" >
       <widget class="QLabel" name="label" >
@@ -47,8 +40,15 @@
      <item row="1" column="1" >
       <widget class="QLineEdit" name="Username" />
      </item>
-     <item row="0" column="1" >
-      <widget class="QLineEdit" name="Website" />
+     <item row="2" column="1" >
+      <widget class="QLineEdit" name="Password" />
+     </item>
+     <item row="2" column="0" >
+      <widget class="QLabel" name="label_3" >
+       <property name="text" >
+        <string>Password</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0" >
       <widget class="QLabel" name="label_2" >
@@ -56,6 +56,56 @@
         <string>Username</string>
        </property>
       </widget>
+     </item>
+     <item row="3" column="0" >
+      <widget class="QCheckBox" name="UseProxy" >
+       <property name="text" >
+        <string>Use proxy</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" >
+      <layout class="QHBoxLayout" >
+       <property name="margin" >
+        <number>0</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLineEdit" name="ProxyHost" >
+         <property name="enabled" >
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_4" >
+         <property name="enabled" >
+          <bool>false</bool>
+         </property>
+         <property name="text" >
+          <string>Port</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="ProxyPort" >
+         <property name="enabled" >
+          <bool>false</bool>
+         </property>
+         <property name="maximumSize" >
+          <size>
+           <width>100</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="inputMask" >
+          <string>99999; </string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
